--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 </head>
 <body>
 
-<!-- Particles Canvas -->
 <canvas id="particles-js"></canvas>
 
 <!-- NAVBAR -->
@@ -35,11 +34,11 @@
 
 <!-- HERO -->
 <section id="home" class="relative min-h-screen flex flex-col justify-center items-center text-center px-6 pt-32 overflow-hidden">
-  <img src="https://i.postimg.cc/cJ5rWr3M/Radicle-MC-Logo-No-BG.png" alt="RadicleMC Logo" class="h-80 mb-6 relative z-10">
-  <h1 class="font-poppins text-7xl font-bold uppercase mb-6 relative z-10" style="background: linear-gradient(90deg, #FFD700, #B8860B); -webkit-background-clip: text; color: transparent;">
+  <img src="https://i.postimg.cc/cJ5rWr3M/Radicle-MC-Logo-No-BG.png" alt="RadicleMC Logo" class="h-80 mb-6">
+  <h1 class="font-poppins text-7xl font-bold uppercase mb-6 hero-text">
     GROW. FIGHT. RISE.
   </h1>
-  <p class="text-xl md:text-2xl max-w-2xl mb-10 relative z-10" style="background: linear-gradient(90deg, #DAA520, #FFD700); -webkit-background-clip: text; color: transparent;">
+  <p class="text-xl md:text-2xl max-w-2xl mb-10 relative hero-text">
     Welcome to <span class="font-semibold" style="color:#FFD700">RadicleMC Lifesteal</span> — grow stronger with every battle and every heart you claim.
   </p>
 
@@ -67,15 +66,15 @@
     <button id="closeModal" class="absolute top-3 right-3 text-gray-500 hover:text-gray-800"><i data-feather="x" class="w-6 h-6"></i></button>
     <h2 class="font-bold text-2xl mb-4" style="color:#8B4513;">Connect to RadicleMC</h2>
     <p class="mb-4" style="color:#D2B48C;">Copy the server IP to join:</p>
-    <input id="serverIp" type="text" value="play.radiclemc.net" readonly class="w-full px-3 py-2 border border-yellow-500 rounded-lg text-center mb-4 bg-yellow-50 text-yellow-700">
+    <input id="serverIp" type="text" value="nl-01.freezehost.pro:11630" readonly class="w-full px-3 py-2 border border-yellow-500 rounded-lg text-center mb-4 bg-yellow-50 text-yellow-700">
     <button id="copyBtn" class="btn-gold w-full flex justify-center items-center"><i data-feather="copy" class="mr-2"></i> Copy IP</button>
   </div>
 </div>
 
 <!-- ABOUT / FEATURES -->
 <section id="about" class="py-24 text-center">
-  <h2 class="font-poppins text-4xl font-bold uppercase mb-6" style="background: linear-gradient(90deg,#FFD700,#B8860B);-webkit-background-clip:text;color:transparent;">The Ultimate Lifesteal Experience</h2>
-  <p class="max-w-3xl mx-auto text-lg mb-12" style="color:#D2B48C;">
+  <h2 class="font-poppins text-4xl font-bold uppercase mb-6 hero-text">The Ultimate Lifesteal Experience</h2>
+  <p class="max-w-3xl mx-auto text-lg mb-12 hero-text">
     RadicleMC is a competitive Lifesteal network where every hit counts, every kill matters, and every heart fuels your rise to power.
   </p>
 
@@ -105,7 +104,7 @@
 
 <!-- GAME MODES -->
 <section id="modes" class="py-24 text-center">
-  <h2 class="font-poppins text-4xl font-bold uppercase mb-6" style="background: linear-gradient(90deg,#FFD700,#B8860B);-webkit-background-clip:text;color:transparent;">Game Modes</h2>
+  <h2 class="font-poppins text-4xl font-bold uppercase mb-6 hero-text">Game Modes</h2>
   <div class="grid md:grid-cols-3 gap-8 mt-12">
     <div class="game-mode-card" style="background: linear-gradient(135deg,#FFF8DC,#FFE4B5);">
       <i data-feather="users" class="w-12 h-12 mb-4 mx-auto" style="color:#FFA500;"></i>
@@ -127,7 +126,7 @@
 
 <!-- COMMUNITY -->
 <section id="community" class="py-24 text-center">
-  <h2 class="font-poppins text-4xl font-bold uppercase mb-6" style="background: linear-gradient(90deg,#FFD700,#B8860B);-webkit-background-clip:text;color:transparent;">Join Our Thriving Community</h2>
+  <h2 class="font-poppins text-4xl font-bold uppercase mb-6 hero-text">Join Our Thriving Community</h2>
   <div class="grid md:grid-cols-2 gap-8 mt-12 max-w-3xl mx-auto">
     <div class="community-card" style="background:#FFF8DC; padding:2rem; border-radius:1rem;">
       <div class="text-3xl font-bold mb-2" style="color:#8B4513;">5,000+</div>
