--- a/index.html
+++ b/index.html
@@ -7,10 +7,79 @@
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700;800&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="style.css">
+<style>
+html::-webkit-scrollbar { width:0px; background:transparent; }
+body {
+  margin:0; padding:0; font-family:Inter,sans-serif;
+  background:#000; /* full black background */
+  overflow-x:hidden;
+  position:relative;
+}
+
+/* Particles canvas */
+#particles-js {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  pointer-events: none;
+}
+
+/* Buttons */
+.btn-gold {
+  background: linear-gradient(90deg, #DAA520, #B8860B);
+  color: #FFF8DC; font-weight:600;
+  padding:0.8rem 1.8rem; border-radius:0.75rem;
+  display:inline-flex; align-items:center; transition:0.3s;
+  box-shadow:0 0 10px rgba(218,165,32,0.4);
+}
+.btn-gold:hover {
+  background: linear-gradient(90deg, #B8860B, #DAA520);
+  transform: translateY(-2px);
+  box-shadow:0 0 15px rgba(218,165,32,0.6);
+}
+
+/* Navbar links default white */
+nav a.scroll-link {
+  color: #ffffff;
+  transition: color 0.3s;
+}
+nav a.scroll-link:hover {
+  color: #FFD700;
+}
+
+/* Cards hover glow + zoom */
+.feature-card, .game-mode-card, .community-card {
+  border-radius:1rem; padding:1.5rem; text-align:center; transition: transform 0.3s, box-shadow 0.3s;
+}
+.feature-card:hover, .game-mode-card:hover, .community-card:hover {
+  transform: scale(1.05);
+  box-shadow:0 0 25px rgba(218,165,32,0.5);
+}
+
+/* Modal */
+.modal-bg { background: rgba(0,0,0,0.5); opacity:0; pointer-events:none; transition:0.4s; position:fixed; inset:0; display:flex; justify-content:center; align-items:center; z-index:100; }
+.modal-bg.active { opacity:1; pointer-events:auto; }
+.modal-content { transform: translateY(-20px); opacity:0; transition:all 0.4s ease; background:white; padding:2rem; border-radius:1.5rem; width:320px; text-align:center; }
+.modal-bg.active .modal-content { transform: translateY(0); opacity:1; }
+
+/* Floating icons */
+.floating-icon { position:absolute; animation:floatUp 6s infinite; opacity:0.6; }
+@keyframes floatUp { 0% { transform: translateY(0); opacity:0.6; } 50%{opacity:1} 100% { transform: translateY(-300px); opacity:0; } }
+
+/* Hero text gradient */
+.hero-text {
+  background: linear-gradient(90deg, #FFD700, #B8860B);
+  -webkit-background-clip: text;
+  color: transparent;
+}
+</style>
 </head>
 <body>
 
+<!-- Particles Canvas -->
 <canvas id="particles-js"></canvas>
 
 <!-- NAVBAR -->
@@ -22,10 +91,10 @@
     </a>
   </div>
   <div class="space-x-6 font-medium hidden md:flex">
-    <a href="#home" class="scroll-link hover:text-yellow-400">Home</a>
-    <a href="#about" class="scroll-link hover:text-yellow-400">About</a>
-    <a href="#modes" class="scroll-link hover:text-yellow-400">Modes</a>
-    <a href="#community" class="scroll-link hover:text-yellow-400">Community</a>
+    <a href="#home" class="scroll-link">Home</a>
+    <a href="#about" class="scroll-link">About</a>
+    <a href="#modes" class="scroll-link">Modes</a>
+    <a href="#community" class="scroll-link">Community</a>
     <a href="https://discord.gg/FsC2cz4cp4" target="_blank" class="text-yellow-600 font-semibold flex items-center">
       <i data-feather="message-circle" class="w-5 h-5 mr-1"></i> Discord
     </a>
@@ -33,7 +102,7 @@
 </nav>
 
 <!-- HERO -->
-<section id="home" class="relative min-h-screen flex flex-col justify-center items-center text-center px-6 pt-32 overflow-hidden">
+<section id="home" class="relative min-h-screen flex flex-col justify-center items-center text-center px-6 pt-20 overflow-hidden">
   <img src="https://i.postimg.cc/cJ5rWr3M/Radicle-MC-Logo-No-BG.png" alt="RadicleMC Logo" class="h-80 mb-6">
   <h1 class="font-poppins text-7xl font-bold uppercase mb-6 hero-text">
     GROW. FIGHT. RISE.
@@ -74,7 +143,7 @@
 <!-- ABOUT / FEATURES -->
 <section id="about" class="py-24 text-center">
   <h2 class="font-poppins text-4xl font-bold uppercase mb-6 hero-text">The Ultimate Lifesteal Experience</h2>
-  <p class="max-w-3xl mx-auto text-lg mb-12 hero-text">
+  <p class="max-w-3xl mx-auto text-lg mb-12" style="color:#D2B48C;">
     RadicleMC is a competitive Lifesteal network where every hit counts, every kill matters, and every heart fuels your rise to power.
   </p>
 
@@ -147,6 +216,83 @@
   <p class="text-yellow-600 mt-6 text-sm">&copy; 2025 RadicleMC. All rights reserved.</p>
 </footer>
 
-<script src="script.js"></script>
+<script>
+feather.replace();
+
+// Smooth scroll
+document.querySelectorAll('.scroll-link').forEach(link=>{
+  link.addEventListener('click', function(e){
+    e.preventDefault();
+    document.querySelector(this.getAttribute('href')).scrollIntoView({behavior:'smooth'});
+  });
+});
+
+// Modal
+const modal = document.getElementById('modal');
+const playBtn = document.getElementById('playNowBtn');
+const closeModal = document.getElementById('closeModal');
+playBtn.addEventListener('click', ()=> modal.classList.add('active'));
+closeModal.addEventListener('click', ()=> modal.classList.remove('active'));
+document.getElementById('copyBtn').addEventListener('click', ()=>{
+  const ip = document.getElementById('serverIp');
+  ip.select();
+  navigator.clipboard.writeText(ip.value);
+  alert('Server IP copied!');
+});
+
+// Player count fetch
+async function updatePlayerCount(){
+  const playerCountEl = document.getElementById('playerCount');
+  try{
+    const response = await fetch('https://api.mcstatus.io/v2/status/java/nl-01.freezehost.pro:11630');
+    const data = await response.json();
+    if(data.online){
+      playerCountEl.textContent = `${data.players.online} Players Online`;
+    } else {
+      playerCountEl.textContent = "Server Offline";
+    }
+  } catch(e){
+    playerCountEl.textContent = "Server Offline";
+  }
+}
+updatePlayerCount();
+setInterval(updatePlayerCount, 5000);
+
+// Particles
+const canvas = document.getElementById('particles-js');
+const ctx = canvas.getContext('2d');
+canvas.width = window.innerWidth;
+canvas.height = window.innerHeight;
+
+let particles = [];
+for(let i=0;i<100;i++){
+  particles.push({
+    x: Math.random()*canvas.width,
+    y: Math.random()*canvas.height,
+    r: Math.random()*3+1,
+    speed: Math.random()*0.5+0.2
+  });
+}
+
+function animate(){
+  ctx.clearRect(0,0,canvas.width,canvas.height);
+  particles.forEach(p=>{
+    p.y -= p.speed;
+    if(p.y<0) p.y = canvas.height;
+    ctx.beginPath();
+    ctx.arc(p.x,p.y,p.r,0,Math.PI*2);
+    ctx.fillStyle="rgba(255,215,0,0.4)";
+    ctx.fill();
+  });
+  requestAnimationFrame(animate);
+}
+animate();
+
+window.addEventListener('resize', ()=>{
+  canvas.width = window.innerWidth;
+  canvas.height = window.innerHeight;
+});
+</script>
+
 </body>
 </html>
